<resources>
    <string name="app_name">玩转郴州</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_home">首页</string>
    <string name="tab_activity">活动</string>
    <string name="tab_news">新闻</string>
    <string name="tab_life">生活</string>
    <string name="tab_user">我</string>
    <string name="tab_about">关于</string>
    <string name="checkin">签到有礼</string>
    <string name="shop">24h便利店</string>
    <string name="tel">常用电话</string>
    <string name="express">快递</string>
    <string name="move">搬家</string>
    <string name="restaurant">餐厅</string>
    <string name="hospital">医院</string>
    <string name="cinema">电影</string>
    <string name="amusement_lan">娱乐休闲</string>
    <string name="amusement_lable">Amusement</string>
    <string name="farmhouse">农家乐</string>
    <string name="pub">酒店</string>
    <string name="ktv">KTV</string>
    <string name="beauty">美容</string>
    <string name="pedicure">足疗</string>
    <string name="teahouse">茶楼</string>
    <string name="driving">代驾</string>
    <string name="studio">影楼</string>
    <string name="training">培训</string>
    <string name="flower">鲜花</string>
    <string name="car">汽车服务</string>
    <string name="maintain">家电维修</string>
    <string name="pipe">管道维修</string>
    <string name="unlocking">开锁</string>
    <string name="house">房屋维修</string>
    <string name="computer">电脑维修</string>
    <string name="wash">保洁</string>
    <string name="worker">钟点工</string>
    <string name="news">新闻</string>
    <string name="summery">摘要</string>
    <string name="share">分享</string>
    <string name="colect">收藏</string>
    <string name="waite_to_load">正在载入数据</string>
    <string name="no_data">没有任何数据</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="login">登陆</string>
    <string name="user_name">用户名</string>
    <string name="user_password">用户密码</string>
    <string name="register_tips"><u>没账号，戳这里注册</u></string>
    <string name="title_activity_local_poi">LocalPoiActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="about">关于</string>
    <string name="app_name_tips">版本:</string>
    <string name="about_team_tips">关于团队-悠然工坊</string>
    <string name="share_str">我在使用玩转郴州app</string>

    <string name="title_activity_start">StartActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="power">悠然工坊出品</string>
    <string name="about_team_info">站长，土生土长的郴州人，本可以靠学历偏偏走了靠苦力搬砖的码农之路,若是加上上学时的编码经历，算算已经好多年，学着电子专业却从了软件开发行业，写着网站后台，却又派去写安卓客户端....此处省略一万行泪水\n\n希望能为郴州本土企业提供互联网服务，如有需要，可以承接各类网站，app开发,需要请联系Allon! Q:1035308417</string>
    <string name="dev_blog">http://froyot.github.io</string>
    <string name="dev_blog_tips">开发者博客:</string>
    <string name="team_site_tips">团队网站:</string>
    <string name="team_site">http://www.aiaiaini.com</string>
    <item type="id" name="tag_model"></item>
    <item type="id" name="tag_model_id"></item>
    <string name="setting_about_description">郴州人的本地资讯app</string>

</resources>
