<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"  >
    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="@color/lightblue"
        android:paddingBottom="@dimen/title_bar_padding"
        android:paddingTop="@dimen/title_bar_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="@dimen/title_font_size" />
    </RelativeLayout>
    <LinearLayout
        android:layout_margin="@dimen/nomal_padding"
        android:padding="@dimen/nomal_padding"
        android:background="@drawable/write_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_tips"
            />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/app_version"
            android:text="1.0.0"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_margin="@dimen/nomal_padding"
        android:padding="@dimen/nomal_padding"
        android:background="@drawable/write_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_blog_tips"
            />
        <TextView
            android:autoLink="all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dev_blog"
            android:text="@string/dev_blog"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_margin="@dimen/nomal_padding"
        android:padding="@dimen/nomal_padding"
        android:background="@drawable/write_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_site_tips"
            />
        <TextView
            android:autoLink="all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_site"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_margin="@dimen/nomal_padding"
        android:padding="@dimen/nomal_padding"
        android:background="@drawable/write_radius"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_team_tips"
            android:drawableBottom="@drawable/bottom_line"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_team_info"
            />


    </LinearLayout>

</LinearLayout>
