<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scroll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffff"
        >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/img"
                android:src="@drawable/ttt"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_alignParentTop="true" />
                <RelativeLayout
                    android:layout_alignBottom="@+id/img"
                    android:layout_alignTop="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_centerInParent="true"
                        android:layout_alignParentLeft="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/name"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/large_font"
                        android:layout_marginLeft="@dimen/nomal_paddingx3"
                        android:text="act"
                        />
                    <LinearLayout
                        android:layout_centerInParent="true"
                        android:paddingLeft="@dimen/nomal_padding"
                        android:paddingRight="@dimen/nomal_padding"
                        android:background="@drawable/gray_radius_bg"
                        android:layout_width="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/nomal_paddingx3"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/fav"
                            />
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/colect"
                        android:textColor="@color/white"

                        />
                    </LinearLayout>
                </RelativeLayout>
                <LinearLayout
                    android:id="@+id/time_address"
                    android:padding="@dimen/nomal_padding"
                    android:layout_below="@+id/img"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/date"
                        android:text=""
                        android:drawableLeft="@mipmap/time"
                        />
                    <TextView
                        android:layout_marginTop="@dimen/nomal_padding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/address"
                        android:text=""
                        android:drawableLeft="@mipmap/local_l"
                        />
                </LinearLayout>
                <WebView
                    android:padding="@dimen/nomal_padding"
                    android:layout_below="@+id/time_address"
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </WebView>



            </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/title_bar_padding"
        android:paddingTop="@dimen/title_bar_padding">
        <ImageView
            android:paddingLeft="@dimen/nomal_padding"
            android:paddingRight="@dimen/nomal_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arr_l"
            android:id="@+id/back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:text="@string/news"
            android:textColor="@color/white"
            android:textSize="@dimen/title_font_size" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/nomal_padding"
            android:text="@string/share"
            />
    </RelativeLayout>
</RelativeLayout>
